Добавил картинку на экран логина

--- a/LearningGit/LearningGit/Base.lproj/Main.storyboard
+++ b/LearningGit/LearningGit/Base.lproj/Main.storyboard
@@ -64,6 +64,10 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ois-hV-727">
+                                <rect key="frame" x="76" y="75" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="BrF-4y-Kla"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
